--- a/Cookie.conf
+++ b/Cookie.conf
@@ -9,3 +9,6 @@ https:\/\/api\.weibo\.cn\/\d\/video\/machine\?gsid - script-request-header weibo
 # 钱包签到Cookie
 https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? - script-request-header weibo.js
 
+#京东获取cookie
+https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/Szeretlek32/master/master/JD/JD_DailyBonus.js
+
