--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,3 +1,7 @@
+# 此远程订阅用于解决QX任务脚本的cookie获取，仅适用于QX 1.0.10及更高版本，您可在使用后手动将其禁用，以避免无意义的MITM。
+
+hostname=weather-data.apple.com, api.weather.com, api.weibo.cn, pay.sc.weibo.com, api.m.jd.com,
+
 #威锋获取Cookie
 ^http:\/\/49.234.36.200:9091\/v1\/auth\/signin - script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/feng/feng.cookie.js
 
@@ -11,4 +15,8 @@ https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? - script-
 
 #京东获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/Szeretlek32/master/master/JD/JD_DailyBonus.js
+
+#彩云天气脚本
+https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header  https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/weather/caiyun.js
+
 
