--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,20 +1,36 @@
 # 此远程订阅用于解决QX任务脚本的cookie获取，仅适用于QX 1.0.10及更高版本，您可在使用后手动将其禁用，以避免无意义的MITM。
 
-hostname=weather-data.apple.com, api.weather.com, api.weibo.cn, pay.sc.weibo.com, api.m.jd.com,
+hostname=weather-data.apple.com,api.weather.com,api.weibo.cn,pay.sc.weibo.com,api.m.jd.com,wapside.189.cn,act.10010.com,m.client.10010.com,49.234.36.200:9091,music.163.com,*.bilibili.com,
 
 #威锋获取Cookie
-^http:\/\/49.234.36.200:9091\/v1\/auth\/signin - script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/feng/feng.cookie.js
+^http:\/\/49.234.36.200:9091\/v1\/auth\/signin - script-request-body https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/feng/feng.cookie.js
 
 #网易云签到获取Cookie
 ^https:\/\/music.163.com\/weapi\/user\/level - script-request-body neteasemusic.cookie.js
 
+#微博超话获取cookie
+^https?://m?api\.weibo\.c(n|om)\/2\/(cardlist|page\/button) - script-request-header https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/weibo/weibotalk.cookie.js
+
 #微博签到cookie
 https:\/\/api\.weibo\.cn\/\d\/video\/machine\?gsid - script-request-header weibo.js
-# 钱包签到Cookie
+#钱包签到Cookie
 https:\/\/pay\.sc\.weibo\.com\/aj\/mobile\/home\/welfare\/signin\/do\? - script-request-header weibo.js
 
 #京东获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/Szeretlek32/master/master/JD/JD_DailyBonus.js
+
+#电信营业厅cookie190及以后版本
+^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/10000/10000.cookie.js
+
+#中国联通Cookie有两条脚本
+^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header 10010.cookie.js
+^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header 10010.cookie.js
+^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header 10010.cookie.js
+
+#哔哩哔哩直播获取cookie
+^https:\/\/(www|live)\.bilibili\.com\/?.? url script-response-body bilibili.cookie.js
+#哔哩哔哩190及以后版本
+^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header bilibili.cookie.js
 
 #彩云天气脚本
 https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header  https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/weather/caiyun.js
