--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,6 +1,6 @@
 # 此远程订阅用于解决QX任务脚本的cookie获取，仅适用于QX 1.0.10及更高版本，您可在使用后手动将其禁用，以避免无意义的MITM。
 
-hostname=weather-data.apple.com,api.weather.com,api.weibo.cn,pay.sc.weibo.com,api.m.jd.com,wapside.189.cn,act.10010.com,m.client.10010.com,49.234.36.200:9091,music.163.com,*.bilibili.com,
+hostname=weather-data.apple.com,api.weather.com,api.weibo.cn,pay.sc.weibo.com,api.m.jd.com,wapside.189.cn,act.10010.com,m.client.10010.com,49.234.36.200:9091,music.163.com,*.bilibili.com,m.bilibili.com,api.bilibili.com,c.tieba.baidu.com,
 
 #威锋获取Cookie
 ^http:\/\/49.234.36.200:9091\/v1\/auth\/signin - script-request-body https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/feng/feng.cookie.js
@@ -31,6 +31,12 @@ https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-reques
 ^https:\/\/(www|live)\.bilibili\.com\/?.? url script-response-body bilibili.cookie.js
 #哔哩哔哩190及以后版本
 ^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header bilibili.cookie.js
+
+#bilibili每日硬币脚本
+^https:\/\/(m|api)\.bilibili\.com\/(x\/v\d\/history\/shadow|service-worker).* url script-request-header bilibiliCoins.js
+
+#百度贴吧获取Cookie
+https?:\/\/(c\.tieba\.baidu\.com|180\.97\.\d+\.\d+)\/c\/s\/login url script-request-header TieBa.js
 
 #彩云天气脚本
 https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header  https://raw.githubusercontent.com/Szeretlek32/master/master/%E8%84%9A%E6%9C%AC/weather/caiyun.js
