--- a/Adg/MyRewrite_lite.conf
+++ b/Adg/MyRewrite_lite.conf
@@ -1,11 +1,10 @@
-hostname =api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com,api.bilibili.com, app.bilibili.com, api.live.bilibili.com,*.amemv.com, www.zhihu.com, zhuanlan.zhihu.com, api.zhihu.com, link.zhihu.com,
+hostname =api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com,api.bilibili.com, app.bilibili.com, api.live.bilibili.com,*.amemv.com, www.zhihu.com, zhuanlan.zhihu.com, api.zhihu.com, link.zhihu.com,tieba.baidu.com
 
 #百度地图开屏广告
 #hostname=*.bdstatic.com
 #^https?:\/\/.+\.bdstatic\.com\/-0U0bnSm1A5BphGlnYG\/tam-ogel\/.+\.jpg url 拒绝
 #百度贴吧(by TributePaulWalker)
 #hostname=*.tieba.baidu.com
-^https?:\/\/c\.tieba\.baidu\.com\/c\/s\/splashSchedule url 拒绝
 ^https?:\/\/c\.tieba\.baidu\.com\/c\/f\/forum\/getAdInfo url 拒绝
 ^https?:\/\/c\.tieba\.baidu\.com\/\w+\/\w+\/(sync|newRnSync|mlog) url 拒绝
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25 [0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/\w+\/\w+\/(sync|newRnSync|mlog) url 拒绝
