--- a/Script.conf
+++ b/Script.conf
@@ -2,7 +2,7 @@
 #破解部分app vip及去除应用内广告
 #需配合主机名共同使用
 
-hostname =api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com,api.bilibili.com, app.bilibili.com, api.live.bilibili.com, www.zhihu.com, zhuanlan.zhihu.com, api.zhihu.com, link.zhihu.com,
+hostname =m.ads.8le8le.com,iadmusicmat.music.com,sofire.baidu.com,ndstatic.cdn.bcebos.com,pan.baidu.com,staticsns.cdn.bcebos.com,issuecdn.baidupcs.com,api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com,api.bilibili.com, app.bilibili.com, api.live.bilibili.com, www.zhihu.com, zhuanlan.zhihu.com, api.zhihu.com, link.zhihu.com,*.tieba.baidu.com,
 
 # 微博去广告(By yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
@@ -59,3 +59,42 @@ https://api.zhihu.com/moments/recommend url script-response-body https://raw.git
 https://api.zhihu.com/topstory/recommend url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20recommend.js
 https://api.zhihu.com/v4/questions url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20zhihu%20answer.js
 #hostname = www.zhihu.com, api.zhihu.com, link.zhihu.com
+
+#百度网盘广告屏蔽(会员卖卡赚钱)
+#hostname=sofire.baidu.com,ndstatic.cdn.bcebos.com,pan.baidu.com,staticsns.cdn.bcebos.com,issuecdn.baidupcs.com
+^https:\/\/pan\.baidu\.com\/pmall\/order\/privilege\/info url reject
+^https:\/\/pan\.baidu\.com\/rest\/.+\/pcs\/adx url reject
+^https:\/\/pan\.baidu\.com\/api\/useractivity\/activity url reject
+^http:\/\/pan\.baidu\.com\/act\/.+\/bchannel\/list url reject
+#^https:\/\/pan\.baidu\.com\/api\/certuser\/get url reject
+^https:\/\/pan\.baidu\.com\/component\/view\/1510\?from url reject
+^https:\/\/sofire\.baidu\.com\/ios\/.+ url reject
+^https:\/\/ndstatic\.cdn\.bcebos\.com\/activity\/welfare\/js\/.+\.js url reject
+^https:\/\/ndstatic\.cdn\.bcebos\.com\/activity\/welfare\/index\.html url reject
+^https:\/\/pan\.baidu\.com\/pmall\/order\/privilege\/info url reject
+^https:\/\/staticsns\.cdn\.bcebos\.com\/amis\/.+/banner.png url reject
+^http:\/\/rp\.hpplay\.cn\/logouts url reject
+#^https:\/\/issuecdn\.baidupcs\.com\/issue\/netdisk\/ts_ad\/guanggao\/.+ url reject
+https:\/\/issuecdn\.baidupcs\.com\/issue\/netdisk\/ts_ad\/ url reject
+https:\/\/pan\.baidu\.com\/rest\/2.0\/pcs\/adv\? url reject
+# https://pan\.baidu\.com\/act\/api\/activityentry\? - reject
+https:\/\/pan\.baidu\.com\/component\/view\/(1510|1130)\?vip url reject
+
+#百度贴吧(by TributePaulWalker)
+#hostname=*.tieba.baidu.com
+^https?:\/\/c\.tieba\.baidu\.com\/c\/s\/splashSchedule url reject
+^https?:\/\/c\.tieba\.baidu\.com\/c\/f\/forum\/getAdInfo url reject
+^https?:\/\/c\.tieba\.baidu\.com\/\w+\/\w+\/(sync|newRnSync|mlog) url reject
+^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/\w+\/\w+\/(sync|newRnSync|mlog) url reject
+^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/c\/s\/splashSchedule url reject
+#mine
+https:\/\/pn\.baidu\.com\/iad\/.+\.json url reject
+^https:\/\/feed-image\.baidu\.com\/0\/pic\/ url reject
+http:\/\/.+\/c\/s\/(trackConfig|dashengVideo|splashSchedule) url reject
+
+#网易云广告
+#hostname=m.ads.8le8le.com,iadmusicmat.music.com
+^https?:\/\/iadmusicmat\.music\.126\.net\/.+\.jpg url reject
+^http:\/\/interface\.music\.163\.com\/eapi\/ad\/config\/get url reject
+^https?:\//m\.ads\.8le8le\.com\/adShow url reject
+
